--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,14 @@
 [build-system]
-requires = ["hatchling"]
+requires = [
+    "hatchling",
+]
 build-backend = "hatchling.build"
 
 [project]
 name = "gitignore-filter"
-version = "0.1.0"
+version = "0.1.1"
 authors = [
-    { name = "Your Name", email = "you@example.com" },
+    { name = "Yoshikazu Kawataki", email = "y.kawataki@gmail.com" },
 ]
 description = "A Python library for .gitignore pattern filtering"
 readme = "README.md"
@@ -38,12 +40,16 @@ dev = [
 ]
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/gitignore_filter"]
+packages = [
+    "src/gitignore_filter",
+]
 
 [tool.black]
 line-length = 100
-target-version = ['py38']
-include = '\.pyi?$'
+target-version = [
+    "py38",
+]
+include = "\\.pyi?$"
 
 [tool.isort]
 profile = "black"
@@ -60,12 +66,21 @@ check_untyped_defs = true
 disallow_untyped_defs = true
 
 [tool.ruff]
-select = ["E", "F", "B", "I"]
+select = [
+    "E",
+    "F",
+    "B",
+    "I",
+]
 ignore = []
 line-length = 100
 target-version = "py38"
 
 [tool.pytest.ini_options]
-testpaths = ["tests"]
-python_files = ["test_*.py"]
+testpaths = [
+    "tests",
+]
+python_files = [
+    "test_*.py",
+]
 addopts = "-v --cov=gitignore_filter --cov-report=term-missing"
