--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -89,7 +89,9 @@ jobs:
 
       - name: Generate changelog
         run: |
-          conventional-changelog -p angular -i CHANGELOG.md -s -r 0
+          NEW_VERSION="${{ steps.get_version.outputs.new_version }}"
+          # conventional-changelogにバージョンを指定して実行
+          conventional-changelog -p angular -i CHANGELOG.md -s -r 0 --tag-prefix "v" --preset-name $NEW_VERSION
 
       - name: Create version commit
         run: |
