--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -133,10 +133,9 @@ jobs:
       - name: Generate changelog
         run: |
           NEW_VERSION="${{ needs.check-version.outputs.new_version }}"
-          # conventional-changelogにバージョンを指定して実行
           echo "{\"version\": \"$NEW_VERSION\"}" > /tmp/changelog-context.json
-          conventional-changelog -p angular -i CHANGELOG.md -s -r 0 -t "v" -c /tmp/changelog-context.json --verbose
-
+          conventional-changelog -p conventionalcommits -i CHANGELOG.md -s -r 0 -t "v" -c /tmp/changelog-context.json --verbose
+          
       - name: Create version commit
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
