--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -47,20 +47,16 @@ jobs:
             SHOULD_BUMP=false
             
             while read -r commit; do
-                # バージョンを進めないコミットタイプを定義
-                if [[ $commit == docs:* ]] || [[ $commit == style:* ]] || [[ $commit == test:* ]] || \
-                  [[ $commit == build:* ]] || [[ $commit == ci:* ]]; then
-                    continue
-                fi
-
-                SHOULD_BUMP=true
-
-                if [[ $commit == feat!:* ]] || [[ $commit == fix!:* ]] || [[ $commit == *"BREAKING CHANGE"* ]]; then
+                # バージョンアップが必要なコミットタイプを定義
+                if [[ $commit == feat!:* ]] || [[ $commit == fix!:* ]] || [[ $commit == perf!:* ]] || [[ $commit == *"BREAKING CHANGE"* ]]; then
+                    SHOULD_BUMP=true
                     BUMP_TYPE="major"
                     break
                 elif [[ $commit == feat:* ]] && [[ $BUMP_TYPE != "major" ]]; then
+                    SHOULD_BUMP=true
                     BUMP_TYPE="minor"
-                elif [[ $BUMP_TYPE != "major" ]] && [[ $BUMP_TYPE != "minor" ]]; then
+                elif [[ $commit == fix:* ]] || [[ $commit == perf:* ]] && [[ $BUMP_TYPE != "major" ]] && [[ $BUMP_TYPE != "minor" ]]; then
+                    SHOULD_BUMP=true
                     BUMP_TYPE="patch"
                 fi
             done <<< "$COMMITS"
